--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <title>Connect Four</title>
 </head>
 <body>
-    <div class="connect-four"></div>
+    <div class="container">
+        <h1>Connect Four</h1>
+        <h3><span id="player">Red</span>'s turn</h3>
+        <div class="connect-four"></div>
+        <br>
+        <button id="restart">Restart</button>
+    </div>
 </body>
 </html>
